--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@primevue/themes": "^4.2.2",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.2",
     "vue": "^3.5.12"
   },
   "devDependencies": {
